--- a/styles/cmod3.css
+++ b/styles/cmod3.css
@@ -57,6 +57,26 @@ div.vu_overlay {
   will-change: transform;
   transform-origin: right;
 }
+div.loading_overlay {
+  width: 100%; height: 100%;
+  background-color: #0c0e0f;
+  opacity: 0.4;
+  position: absolute;
+  z-index: 999;
+  text-align: center;
+}
+@-webkit-keyframes scaling {
+    from {-webkit-transform: scale(1);}
+    to   {-webkit-transform: scale(2);}
+}
+div.loading_overlay div.loading_overlay_text{
+  width: 100%;
+  position: absolute;
+  top: 30%;
+  font-size: 18px;
+  color: #fff;
+  -webkit-animation: scaling 5s infinite linear;
+}
 div#header {
 }
 table#playlist, table#search_results {
@@ -70,7 +90,14 @@ div#footer {
   color: #444;
   margin-top: 4px; padding-bottom: 0px;
 }
-div#main, div#modarchive {
+div#main {
+  overflow-y: scroll;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+div#modarchive {
   overflow-y: scroll;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -96,10 +123,18 @@ div#info {
 .dropdown:hover .dropdown-menu {
   display: block;
 }
+input[type="radio"], input[type="checkbox"] {
+  margin: 2px 0 0;
+  line-height: normal;
+}
 pre {
   border: 0;
   color: inherit;
   background-color: #242627;
+}
+hr {
+  width: 33%;
+  border-top: 1px solid #323232;
 }
 nav {
   padding-left: 20px;
