--- a/src/styles/cmod3.css
+++ b/src/styles/cmod3.css
@@ -102,6 +102,11 @@ div#info {
   padding-top: 10px;
   padding-bottom: 10px;
 }
+table td {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 /* bootstrap */
 .table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
