--- a/src/app/ui/modarchive/modarchive.tpl.html
+++ b/src/app/ui/modarchive/modarchive.tpl.html
@@ -52,7 +52,7 @@
                 <td>{{ song.filename }}</td>
                 <td>{{ song.artist || "-" }}</td>
                 <td>{{ song.size }}</td>
-                <td style="color: yellow; opacity: {{song.score}};">&#x2605;</td>
+                <td style="color: #FFCF00; opacity: {{song.score}};">&#x2605;</td>
             </tr>
           </tbody>
           <tfoot>
