--- a/src/app/ui/playlist/playlist.tpl.html
+++ b/src/app/ui/playlist/playlist.tpl.html
@@ -9,8 +9,8 @@
       <table ng-show="state.playlist.length > 0" id="playlist" class="table table-condensed table-hover">
         <thead>
           <tr>
-            <th class="col-xs-1"><small>#</small></th>
-            <th class="col-xs-6"><small>SONG</small></th>
+            <th class="col-xs-1" style="text-align:center;"><small>#</small></th>
+            <th class="col-xs-6" style="text-align:center;"><small>SONG</small></th>
             <th class="col-xs-4"><small>FILENAME</small></th>
             <th class="col-xs-1"><small>TIME</small></th>
           </tr>
@@ -22,8 +22,8 @@
             ng-right-click="showOptions($index, $event)"
             ng-class="{ selected_song: ($index === state.current_song_index) }"
             >
-              <td>{{ $index + 1 }}</td>
-              <td>{{ song.name }}</td>
+              <td style="text-align:center;">{{ $index + 1 }}</td>
+              <td style="text-align:center;">{{ song.name }}</td>
               <td>{{ song.filename }}</td>
               <td>{{ song.metadata.duration | mmss }}</td>
           </tr>
