--- a/src/app/ui/misc/about.tpl.html
+++ b/src/app/ui/misc/about.tpl.html
@@ -22,6 +22,7 @@
       through jlg.hrtc@gmail.com (PayPal) to support their jobs.
 
       * https://github.com/jllodra/cmod3 * Pull requests are welcome *
+      Thanks to Rubén Nine (aka tonka) for the betatesting!
           </pre>
         </div>
       </div>
