--- a/src/app/ui/misc/about.tpl.html
+++ b/src/app/ui/misc/about.tpl.html
@@ -14,15 +14,15 @@
 
       Thank you for using cmod3!
 
-      This is a hobby project by Josep Llodrà (herotyc^asynkro^xplsv),
-      and also the author's legacy for the modscene.
+    This is a hobby project by Josep Llodrà (herotyc^asynkro^xplsv),
+    and also the author's legacy for the modscene.
 
-      I hope you enjoy it a lot, and if you do, consider making a donation
-      to the Modarchive, Scenemusic, libopenmpt, or to the author
-      through jlg.hrtc@gmail.com (PayPal) to support their jobs.
+    I hope you enjoy it a lot, and if you do, consider a donation
+    to the Modarchive, Scenemusic, libopenmpt, or to the author
+    through jlg.hrtc@gmail.com (PayPal) to support their jobs.
 
-      * https://github.com/jllodra/cmod3 * Pull requests are welcome *
-      Thanks to Rubén Nine (aka tonka) for the betatesting!
+    * https://github.com/jllodra/cmod3 * Pull requests are welcome *
+    Thanks to Rubén Nine (aka tonka) for the betatesting!
           </pre>
         </div>
       </div>
