--- a/src/styles/cmod3.css
+++ b/src/styles/cmod3.css
@@ -31,6 +31,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: 'Droid Sans';
+  font-size: 11px;
 }
 body.hover {
   opacity: 0.5;
@@ -109,6 +110,12 @@ table td {
 }
 
 /* bootstrap */
+.btn {
+  font-size: 11px;
+}
+.dropdown-menu {
+  font-size: 11px;
+}
 .table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
   padding: 2px;
 }
@@ -129,6 +136,7 @@ pre {
   border: 0;
   color: inherit;
   background-color: #242627;
+  font-size: 11px;
 }
 hr {
   width: 33%;
