--- a/src/app/ui/playlist/playlist.tpl.html
+++ b/src/app/ui/playlist/playlist.tpl.html
@@ -9,8 +9,9 @@
       <table ng-show="state.playlist.length > 0" id="playlist" class="table table-condensed table-hover">
         <thead>
           <tr>
-            <th class="col-xs-1" style="text-align:center;"><small>#</small></th>
-            <th class="col-xs-6" style="text-align:center;"><small>SONG</small></th>
+            <th class="col-xs-1"></th>
+            <th class="col-xs-1" style="text-align:left;"><small>#</small></th>
+            <th class="col-xs-5" style="text-align:center;"><small>SONG</small></th>
             <th class="col-xs-4"><small>FILENAME</small></th>
             <th class="col-xs-1"><small>TIME</small></th>
           </tr>
@@ -20,9 +21,10 @@
             ng-repeat="song in state.playlist"
             ng-click="playSongInPlaylist($index)"
             ng-right-click="showOptions($index, $event)"
-            ng-class="{ selected_song: ($index === state.current_song_index) }"
+            ng-class="{ active_row: ($index === state.current_song_index) }"
             >
-              <td style="text-align:center;">{{ $index + 1 }}</td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:left;">{{ $index + 1 }}</td>
               <td style="text-align:center;">{{ song.name }}</td>
               <td>{{ song.filename }}</td>
               <td>{{ song.metadata.duration | mmss }}</td>
@@ -30,7 +32,7 @@
         </tbody>
         <tfoot>
           <tr>
-            <td colspan="4"><small>Total songs: {{ state.playlist.length }}</small></td>
+            <td colspan="5"><small>Total songs: {{ state.playlist.length }}</small></td>
           </tr>
         </tfoot>
       </table>
