--- a/src/app/ui/misc/about.tpl.html
+++ b/src/app/ui/misc/about.tpl.html
@@ -23,6 +23,7 @@
 
     * https://github.com/jllodra/cmod3 * Pull requests are welcome *
     Thanks to Rubén Nine (aka tonka) for the betatesting!
+    Nectarine and Modarchive logos are (c) by their respective owners.
           </pre>
         </div>
       </div>
