bugfixes, ui tweaks

--- a/src/app/ui/info/info.tpl.html
+++ b/src/app/ui/info/info.tpl.html
@@ -23,7 +23,7 @@
         </thead>
         <tbody id="infoNectarine_now">
           <tr ng-repeat="entry in state.nectarine_info.now" class="active_row">
-            <td style="text-align:center;"></td>
+            <td style="text-align:center;"><span class="glyphicon glyphicon-volume-down"></span></td>
             <td>{{ entry.song }}</td>
             <td>{{ entry.artist }}</td>
             <td>{{ entry.requester }}</td>
