--- a/src/app/ui/header/header.tpl.html
+++ b/src/app/ui/header/header.tpl.html
@@ -20,6 +20,13 @@
             </div>
           </div>
         </li>
+        <li>
+          <div id="vol" ng-click="vochange($event)">
+            <div id="volbar" class="vo">
+              <div class="vo_overlay" style="transform: scaleX({{ vo }})"></div>
+            </div>
+          </div>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
