--- a/src/styles/cmod3.css
+++ b/src/styles/cmod3.css
@@ -48,7 +48,7 @@ div#vus {
 div.vu {
   width: 170px; height: 4px;
   margin: 8px;
-  background: -webkit-linear-gradient(left, #4be553 0%,#4be553 54%,#d3e200 79%,#f4c700 86%,#ff0000 100%); /* Chrome10+,Safari5.1+ */
+  background: -webkit-linear-gradient(left, #4be553 0%,#4be553 54%,#d3e200 79%,#f4c700 86%,#ff0000 100%);
 }
 div.vu_overlay {
   width: 100%; height: 100%;
@@ -58,6 +58,26 @@ div.vu_overlay {
   will-change: transform;
   transform-origin: right;
 }
+div#vol {
+  position: absolute;
+  top: 19px;
+  left: 198px;
+}
+div.vo {
+  width: 40px;
+  height: 12px;
+  background: -webkit-linear-gradient(left, #4be553 0%,#4be553 24%,#d3e200 59%,#f4c700 76%,#ff0000 100%);
+  box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,0.75);
+}
+div.vo_overlay {
+  width: 100%; height: 100%;
+  background-color: #0c0e0f;
+  float: right;
+  right: 0;
+  will-change: transform;
+  transform-origin: right;
+}
+
 div.loading_overlay {
   width: 100%; height: 100%;
   background-color: #0c0e0f;
