--- a/src/styles/cmod3.css
+++ b/src/styles/cmod3.css
@@ -63,20 +63,29 @@ div#vol {
   top: 19px;
   left: 198px;
 }
-div.vo {
+input.vo {
   width: 40px;
   height: 12px;
   background: -webkit-linear-gradient(left, #4be553 0%,#4be553 24%,#d3e200 59%,#f4c700 76%,#ff0000 100%);
   box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,0.75);
+  outline: none;
 }
-div.vo_overlay {
+input::-webkit-slider-thumb {
+  border: solid 1px #dedede;
+  border-radius: 0;
+  height: 12px;
+  width: 2px;
+  -webkit-appearance: none;
+  outline: none;
+}
+/*div.vo_overlay {
   width: 100%; height: 100%;
   background-color: #0c0e0f;
   float: right;
   right: 0;
   will-change: transform;
   transform-origin: right;
-}
+}*/
 
 div.loading_overlay {
   width: 100%; height: 100%;
