cleanup and angular shortcut

--- a/src/app/ui/header/header.tpl.html
+++ b/src/app/ui/header/header.tpl.html
@@ -13,10 +13,12 @@
         <li>
           <div id="vus">
             <div id="vuleft" class="vu">
-              <div class="vu_overlay" style="transform: scaleX({{ vuleft }})"></div>
+              <!--<div id="vul_overlay" class="vu_overlay" style="transform: scaleX({{ vuleft }})"></div>-->
+              <div id="vul_overlay" class="vu_overlay"></div>
             </div>
             <div id="vuright" class="vu">
-              <div class="vu_overlay" style="transform: scaleX({{ vuright }})"></div>
+              <!--<div id="vur_overlay" class="vu_overlay" style="transform: scaleX({{ vuright }})"></div>-->
+              <div id="vur_overlay" class="vu_overlay"></div>
             </div>
           </div>
         </li>
