--- a/src/app/ui/playlist/playlist.tpl.html
+++ b/src/app/ui/playlist/playlist.tpl.html
@@ -1,4 +1,4 @@
-<div id="main" class="container-fluid" style="height: {{ height }}px">
+<div id="main" ng-click="markSongInPlaylist(null, $event)" class="container-fluid" style="height: {{ height }}px">
   <div class="row">
     <div class="col-xs-12">
       <div ng-show="state.playlist.length === 0" class="panel panel-default">
@@ -19,9 +19,10 @@
         <tbody>
           <tr
             ng-repeat="song in state.playlist"
-            ng-click="playSongInPlaylist($index)"
+            ng-click="markSongInPlaylist($index, $event)"
+            ng-dblclick="playSongInPlaylist($index)"
             ng-right-click="showOptions($index, $event)"
-            ng-class="{ active_row: ($index === state.current_song_index) }"
+            ng-class="{ marked_row: ($index === state.current_song_index_marked), active_row: ($index === state.current_song_index) }"
             >
               <td style="text-align:center;"><span ng-show="$index === state.current_song_index" class="glyphicon glyphicon-volume-down"></span></td>
               <td style="text-align:left;">{{ $index + 1 }}</td>
