--- a/src/app/ui/playlist/playlist.tpl.html
+++ b/src/app/ui/playlist/playlist.tpl.html
@@ -44,6 +44,8 @@
         Add file(s)
       </button>
       <input style="display: none;" id="addFilesToPlaylistHidden" type="file" nwworkingdir="{{basedir}}" multiple accept=".mod,.s3m,.xm,.it,.mptm,.stm,.nst,.m15,.stk,.wow,.ult,.669,.mtm,.med,.far,.mdl,.ams,.dsm,.amf,.okt,.dmf,.ptm,.psm,.mt2,.dbm,.digi,.imf,.j2b,.gdm,.umx,.mo3,.xpk,.ppm,.mmcmp">
+      <input style="display: none ;" id="savePlaylistHidden" type="file" nwworkingdir="{{basedir}}" nwsaveas="playlist.json" />
+      <input style="display: none ;" id="loadPlaylistHidden" type="file" nwworkingdir="{{basedir}}" accept=".json"/>
     </div>
 
   </div>
