--- a/src/app/ui/misc/about.tpl.html
+++ b/src/app/ui/misc/about.tpl.html
@@ -22,7 +22,8 @@
     through jlg.hrtc@gmail.com (PayPal) to support their jobs.
 
     * https://github.com/jllodra/cmod3 * Pull requests are welcome *
-    Thanks to Rubén Nine (aka tonka) for the betatesting!
+    Thanks to Rubén Nine (aka tonka) for the betatesting, thanks to
+    Mike Smith for his contribution to the load and save playlist code.
     Nectarine and Modarchive logos are (c) by their respective owners.
           </pre>
         </div>
